# log_parser

./: .gitignore  Cargo.toml  README.md  generate_bench_data.py
benches/: benches.rs
src/: error.rs  lib.rs  main.rs  summary.rs
src/parsers/: char_parser.rs  json_parser.rs  mod.rs  re_parser.rs  string_parser.rs
src/summarizers/: mod.rs
src/summarizers/async_buf_reader/: batch_reader.rs  byte_lines.rs  error.rs  mod.rs  parser_error.rs
src/summarizers/sync_buf_reader/: mod.rs  parser_error.rs
